Refined the card and centred the card at 1440px

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container">
-      <div class="qr-code">
+    <header class="container">
+      <main class="qr-code">
         <img
           class="qr-code__img"
           src="images/image-qr-code.png"
@@ -35,16 +35,16 @@
           </h2>
           <p class="qr-code__text">
             Scan the QR code to visit Frontend Mentor and take your coding
-            skills to a new level
+            skills to the next level
           </p>
         </div>
-      </div>
-      <div class="attribution">
+      </main>
+      <footer class="attribution">
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
         >. Coded by <a href="#">George Oranga</a>.
-      </div>
-    </div>
+      </footer>
+    </header>
   </body>
 </html>
